# rust-nitro-sniper

./: .env.example  .gitignore  .travis.yml  Cargo.toml  README.md
ci/: before_deploy.sh  install.sh
src/: cache.rs  config.rs  discord.rs  handler.rs  logging.rs  main.rs  matcher.rs  util.rs  webhook.rs
