[package]
name = "rust-nitro-sniper"
version = "2.5.1"
authors = ["Mel"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.9"
lazy_static = "1.4.0"
hyper = "0.13.7"
hyper-tls = "0.4.3"
chrono = "0.4.13"
log = "0.4.11"
colored = "2.0.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
futures = "0.3.5"

[dependencies.serenity]
git = "https://github.com/Melonai/serenity"
branch = "current"
default-features = false
features = ["client", "rustls_backend", "model", "builder", "cache", "http", "utils", "gateway"]

[dependencies.tokio]
version = "0.2.22"
features = ["macros"]

[dependencies.fern]
version = "0.6.0"
features = ["colored"]

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.30", features = ["vendored"] }